# mdbook-quiz

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile.toml  README.md  build.rs  chapter_1.html  flake.nix  index.html  mdbook-quiz.schema.json  print.html  quiz-example.toml  quiz.toml  searchindex.js  searchindex.json
.github/workflows/: main.yml  release.yml
.github/workflows/setup/: action.yaml
crates/mdbook-quiz/: Cargo.toml  build.rs
crates/mdbook-quiz-schema/: Cargo.toml
crates/mdbook-quiz-schema/src/: lib.rs
crates/mdbook-quiz-validate/: Cargo.toml
crates/mdbook-quiz-validate/src/: lib.rs  spellcheck.rs
crates/mdbook-quiz-validate/src/impls/: markdown.rs  mod.rs  multiple_choice.rs  short_answer.rs  tracing.rs
crates/mdbook-quiz/src/: main.rs
crates/mdbook-quiz/src/utils/: asset.rs  html.rs  mod.rs  preprocessor.rs
example/: .gitignore  book.toml
example/mdbook/: .gitignore  book.toml
example/mdbook/src/: quiz-example.toml
example/src/: chapter_1.md  quiz-example.toml  quiz.toml
example/standalone/: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
example/standalone/src/: index.tsx  telemetry.ts
example/standalone/styles/: index.scss
js/: .eslintrc.cjs  .gitignore  .npmrc  .stylelintrc.json  build.mjs  convert-mcq-format.mjs  index.scss  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
js/css/: feedback.scss  index.scss
js/lib/: consent.tsx  export.ts  index.scss  index.tsx  logging.ts  mdbook-quiz.tsx  question-types.d.mts  question-types.mjs  validate.ts  validator.ts
js/lib/components/: markdown.tsx  more-info.tsx  quiz.tsx  snippet.tsx
js/lib/components/feedback/: modal.tsx  renderer.tsx  selection.tsx  tooltip.tsx
js/lib/entryPoints/: consent.tsx  embed.tsx  feedback.tsx  gen-quiz-ids.ts  validator.ts
js/lib/questions/: bad-program.tsx  base.tsx  mod.tsx  multiple-choice.tsx  multiple-choice.validate.ts  short-answer.tsx  tracing.tsx  tracing.validate.ts  types.tsx  validate.ts
js/tests/: multiple-choice.test.tsx  question.test.tsx  quiz.test.tsx  setup-globals.js  short-answer.test.tsx  tracing.test.tsx  tsconfig.json  utils.ts  validate.test.ts
mdbook-quiz/: embed.css  embed.js  lib.css
quiz/: lib.css  lib.js  quiz-embed.iife.js  quiz-embed.mjs  style.css
src/: main.rs  processor.rs
