[package]
name = "mdbook-quiz"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Interactive quizzes for your mdBook"
license = "MIT"
version = "0.2.9"
edition = "2021"
include = ["/src", "/js/packages/quiz-embed/dist/", "/js/packages/quiz-validator/dist/"]
repository = "https://github.com/willcrichton/mdbook-quiz"

[features]
rust-editor = []

[dependencies]
serde_json = "1"
anyhow = {version = "1", features = ["backtrace"]}
clap = {version = "3", default-features = false, features = ["derive", "std"]}
mdbook = {version = "0.4", default-features = false}
semver = "1"
regex = "1"
html-escape = "0.2"
toml = "0.5"
lazy_static = "1.4"
rayon = {version = "1.5", default-features = false}
tempfile = "3"

