[package]
name = "mdbook-quiz"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "Interactive quizzes for your mdBook"
license = "MIT"
version = "0.2.12"
edition = "2021"
include = ["/src", "/js/packages/quiz-embed/dist/", "/js/packages/quiz-validator/dist/"]
repository = "https://github.com/cognitive-engineering-lab/mdbook-quiz"

[features]
rust-editor = []
source-map = []

[dependencies]
serde_json = "1"
anyhow = {version = "1", features = ["backtrace"]}
regex = "1"
html-escape = "0.2"
toml = "0.5"
tempfile = "3"
mdbook-preprocessor-utils = "0.1"

[dev-dependencies]
mdbook-preprocessor-utils = { version = "0.1", features = ["testing"] }
