[package]
name = "mdbook-quiz-schema"
version = "0.1.1"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "Schema for quizzes used in mdbook-quiz"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/cognitive-engineering-lab/mdbook-quiz"

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
ts-rs = "7.0.0"

[dev-dependencies]
toml = { workspace = true }