[package]
name = "mdbook-quiz"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "Interactive quizzes for your mdBook"
license = "MIT OR Apache-2.0"
version = "0.3.12"
edition = "2024"
include = ["/src", "/js"]
repository = "https://github.com/cognitive-engineering-lab/mdbook-quiz"
readme = "../../README.md"

[features]
rust-editor = []
aquascope = ["mdbook-aquascope"]
source-map = []

[dependencies]
serde_json = "1"
anyhow = { workspace = true, features = ["backtrace"] }
regex = "1"
html-escape = "0.2"
toml = { workspace = true }
mdbook = "= 0.4.25"
mdbook-preprocessor-utils = "0.2.0"
mdbook-aquascope = {version = "=0.3.5", optional = true}
mdbook-quiz-schema = {path = "../mdbook-quiz-schema", version = "0.3.4"}
mdbook-quiz-validate = {path = "../mdbook-quiz-validate", version = "0.3.4"}
toml_edit = "0.20.0"
uuid = {version = "1.4.1", features = ["v4"]}
log = "0.4.20"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
mdbook-preprocessor-utils = { version = "0.2.0", features = ["testing"] }

[build-dependencies]
anyhow = { workspace = true }
mdbook-preprocessor-utils = "0.2.0"